--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "travel-app",
+  "name": "evaluate-news-nlp",
   "version": "1.0.0",
-  "description": "Project 5 from the Udacity Front End Nanodegree program.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/server.js",
+    "test": "jest",
+    "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/irinakramer/travel-app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/irinakramer/travel-app/issues"
-  },
-  "homepage": "https://github.com/irinakramer/travel-app#readme",
+  "description": "",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "path": "^0.12.7",
-    "webpack": "^5.6.0"
+    "node-fetch": "^2.6.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "@babel/preset-env": "^7.12.7",
-    "babel-loader": "^8.2.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "terser-webpack-plugin": "^5.0.3",
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^3.7.2",
+    "workbox-webpack-plugin": "^5.1.4"
   }
 }
