--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evaluate-news-nlp",
+  "name": "travel-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,9 @@
     "build-dev": "webpack-dev-server  --config webpack.dev.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "@irinakramer",
   "license": "ISC",
-  "description": "",
+  "description": "Travel app that takes user destination city and departure date and returns photo and weather forecast.",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
