--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "url-loader": "^4.1.1",
     "webpack-dev-server": "^3.7.2",
     "workbox-webpack-plugin": "^5.1.4"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
